@@ -212,7 +212,7 @@ public class Template extends Configurable {
      */
     static public Template getPlainTextTemplate(String name, String sourceName, String content, Configuration config) {
         Template t = new Template(
-                _CoreAPI.newUnboundTemplate(content, sourceName != null ? sourceName : name, config),
+                _CoreAPI.newPlainTextUnboundTemplate(content, sourceName != null ? sourceName : name, config),
                 name, config);
         DebuggerService.registerTemplate(t);
         return t;
@@ -463,9 +463,9 @@ public class Template extends Configurable {
      * Returns the name of the charset used for reading included/imported template files by default.
      * 
      * <p>
-     * At least when FreeMarker is built-in template loading mechanism is used, by default this setting is set to
-     * the same value as the {@link UnboundTemplate#getEncoding()} of the wrapped {@link UnboundTemplate}. That is,
-     * it will be the charset used to read the template "file" from which this {@link Template} object was created from.
+     * At least when FreeMarker is built-in template loading mechanism is used, by default this setting is set to the
+     * same value as the {@link UnboundTemplate#getTemplateSpecifiedEncoding()} of the wrapped {@link UnboundTemplate},
+     * if that's non-{@code null}.
      * 
      * <p>
      * While "inheriting" charset from the referring template is not seen as a good idea anymore, it's still used by
